# ABS-DeepRobotics-Lite3

./: .gitignore  README.md
ABS/training/: .gitignore
ABS/training/legged_gym/legged_gym/envs/: __init__.py
ABS/training/legged_gym/legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_pos.py
ABS/training/legged_gym/legged_gym/envs/lite3/: lite3_pos_config.py  lite3_rec_config.py  lite3_rough_config.py
ABS/training/legged_gym/legged_gym/envs/x30/: x30_rough_config.py
ABS/training/legged_gym/legged_gym/scripts/: camrec.py  mytest.py  mytestbed.py  play.py  play_control.py  play_cv.py  testbed.py  train_depth_resnet.py
ABS/training/legged_gym/legged_gym/utils/: helpers.py  task_registry.py
ABS/training/legged_gym/resources/robots/Lite3/meshes/: FL_HIP.dae  FR_HIP.dae  HL_HIP.dae  HR_HIP.dae  SHANK.dae
ABS/training/legged_gym/resources/robots/Lite3/urdf/: Lite3.urdf
ABS/training/legged_gym/resources/robots/X30/urdf/: X30.urdf
Deploy/NX/: udp_sender.py
Deploy/NX/resnet/: README.md
Deploy/rl_controller/: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  make.sh
Deploy/rl_controller/interface/: CMakeLists.txt  test.cpp
Deploy/rl_controller/interface/robot/: robot_interface.h
Deploy/rl_controller/interface/robot/hardware/: lite3_hardware_interface.hpp  x30_hardware_interface.hpp
Deploy/rl_controller/interface/robot/simulation/: jueying_raisim_simulation.hpp  raisim_interface.hpp
Deploy/rl_controller/interface/user_command/: keyboard_interface.hpp  retroid_gamepad_interface.hpp  skydroid_gamepad_interface.hpp  user_command_interface.h
Deploy/rl_controller/run_policy/: CMakeLists.txt  jueying_policy_runner.cpp  jueying_policy_runner.h  policy_define.h  policy_runner.hpp
Deploy/rl_controller/scripts/: scp_torch_to_remote.sh  sftp_to_remote.sh
Deploy/rl_controller/sensor/: sensor_receiver.cpp  sensor_receiver.hpp
Deploy/rl_controller/state_machine/: idle_state.hpp  joint_damping_state.hpp  rl_control_state.cpp  rl_control_state.h  standup_state.hpp  state_base.h  state_machine.hpp
Deploy/rl_controller/state_machine/parameters/: control_parameters.h  lite3_control_parameters.cpp  p50_control_parameters.cpp  x30_control_parameters.cpp
Deploy/rl_controller/types/: common_types.h  custom_types.h
